# JelloSim

./: .gitignore  CMakeLists.txt  Makefile  README.md  TetgenSetupAndUsage  USAGE_INSTRUCTIONS.md
CMake/: FindCapnProto.cmake  FindEigen3.cmake  FindHalf.cmake  FindMetis.cmake  (+5 more)
Simulator/: CMakeLists.txt  Makefile  main.cpp  sim
Simulator/TestPoints/: testPointsFrame1.bgeo  testPointsFrame10.bgeo  testPointsFrame100.bgeo  testPointsFrame101.bgeo  testPointsFrame102.bgeo  testPointsFrame103.bgeo  testPointsFrame104.bgeo  testPointsFrame105.bgeo  testPointsFrame106.bgeo  testPointsFrame107.bgeo  testPointsFrame108.bgeo  testPointsFrame109.bgeo  testPointsFrame11.bgeo  testPointsFrame110.bgeo  testPointsFrame111.bgeo  testPointsFrame112.bgeo  testPointsFrame113.bgeo  testPointsFrame114.bgeo  testPointsFrame115.bgeo  testPointsFrame116.bgeo  testPointsFrame117.bgeo  testPointsFrame118.bgeo  testPointsFrame119.bgeo  testPointsFrame12.bgeo  testPointsFrame120.bgeo  testPointsFrame121.bgeo  testPointsFrame13.bgeo  testPointsFrame14.bgeo  testPointsFrame15.bgeo  testPointsFrame16.bgeo  testPointsFrame17.bgeo  testPointsFrame18.bgeo  testPointsFrame19.bgeo  testPointsFrame2.bgeo  testPointsFrame20.bgeo  testPointsFrame21.bgeo  testPointsFrame22.bgeo  testPointsFrame23.bgeo  testPointsFrame24.bgeo  testPointsFrame25.bgeo  (+81 more)
Simulator/src/: bounds.cpp  bounds.h  collisions.h  forces.h  globals.h  mesh.cpp  mesh.h  particles.cpp  particles.h  sdf.h  sim.cpp  sim.h  tetrahedron.cpp  tetrahedron.h  tetrahedrons.cpp  tetrahedrons.h  triangles.cpp  triangles.h  utilities.h
(+439 files in other folders)
